--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div id="container">
 	<img src="logo.svg" id="logo_image" alt="RiskyTrees logo"></img>
-    <h1>Attack trees for security teams </h1>
+    <h1>Attack trees for everyone.</h1>
 
     <h2>Coming 2023</h2>
 </div>
