--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <div id="container">
-	<img src="logo.svg" id="logo_image" alt="RiskyTrees logo"></img>
+	<img src="Group 214(1).png" id="logo_image" alt="RiskyTrees logo"></img>
     <h1>Attack trees for everyone.</h1>
 
     <h2>Coming 2023</h2>
