--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<img src="Group 214(1).png" id="logo_image" alt="RiskyTrees logo"></img>
     <h1>Attack trees for everyone.</h1>
 
-    <h2>Coming 2023</h2>
+    <h2>Try the <a href="https://dev.app.riskytrees.com">Alpha</a></h2>
+    
 </div>
   </body>
 </html>
